1. 状态码配置化 2. 新增通过name和password字段查询用户
