# router/router.go
@@ -19,5 +19,6 @@ func Router() *gin.Engine {
 	r.GET("/user/createUser", service.CreateUser)
 	r.GET("/user/deleteUser", service.DeleteUser)
 	r.POST("/user/updateUser", service.UpdateUser)
+	r.GET("/user/findUserByNameAndPwd", service.FindUserByNameAndPwd)
 	return r
 }
